cluster/manifests/cortex-api/overlays/dev/chrome-devtools-protocol-server/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: chrome-devtools-protocol-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: chrome-devtools-protocol-server
  mtls:
    mode: STRICT
  portLevelMtls:
    # Knative activator probes this port over plain HTTP via PassthroughCluster.
    "8012":
      mode: PERMISSIVE
